Major refactoring.
I've done many semantic-preserving changes to improve code readability, code conventions, and performance. Also, updated a few pieces of code to newer versions of libraries and JDK features (e.g., foreach loop, streams, etc).