@@ -1,136 +1,99 @@
 package gin.util;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.Serializable;
-import java.lang.reflect.Field;
-import java.nio.charset.Charset;
-import java.text.ParseException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import com.opencsv.CSVReaderHeaderAware;
 import com.opencsv.CSVWriter;
 import com.opencsv.exceptions.CsvValidationException;
 import com.sampullara.cli.Args;
 import com.sampullara.cli.Argument;
-
+import gin.Patch;
+import gin.SourceFile;
+import gin.test.*;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.StopWatch;
 import org.pmw.tinylog.Logger;
 
-import gin.Patch;
-import gin.SourceFile;
-import gin.test.ExternalTestRunner;
-import gin.test.InternalTestRunner;
-import gin.test.UnitTest;
-import gin.test.UnitTestResult;
-import gin.test.UnitTestResultSet;
+import java.io.*;
+import java.lang.reflect.Field;
+import java.nio.charset.Charset;
+import java.text.ParseException;
+import java.util.*;
 
 /**
  * Handy class for mutating and running tests on mutated code.
- *
+ * <p>
  * Each subclass can access project data through the methodData structure.
- *
+ * <p>
  * Required input: projectDirectory, methodFile, projectName (Gradle)
  * Required input: projectDirectory, methodFile, projectName, mavenHome (Maven)
  * Required input: projectDirectory, methodFile, classPath (otherwise)
  * methodFile is assumed to be the output file of gin.util.Profiler, though only Method and Tests columns are required
- * Contains an option of running tests in a separate jvm. 
- *
+ * Contains an option of running tests in a separate jvm.
  */
 public abstract class Sampler implements Serializable {
 
     /*============== Required  ==============*/
 
+    @Serial
     private static final long serialVersionUID = -567446476194791424L;
+    // Arguments used in the method file
+    private static final String TEST_SEPARATOR = ",";
+    private static final String METHOD_SEPARATOR = ".";
 
+    /*============== Optional (required only for certain types of projects, ignored otherwise)  ==============*/
+    // Used for writing data to outputFile
+    private static final String[] OUT_HEADER = {"PatchIndex", "PatchSize", "Patch", "MethodIndex", "TestIndex", "UnitTest", "RepNumber",
+            "PatchValid", "PatchCompiled", "TestPassed", "TestExecutionTime(ns)", "TestCPUTime(ns)",
+            "TestTimedOut", "TestExceptionType", "TestExceptionMessage", "AssertionExpectedValue",
+            "AssertionActualValue", "NoOp", "EditsValid"};
+    private static final Integer DEFAULT_ID = 0; // default id for MethodIndex
     @Argument(alias = "d", description = "Project directory, required", required = true)
     protected File projectDirectory;
-    
+
+    /*============== Optional (setup)  ==============*/
     @Argument(alias = "m", description = "Method file, required", required = true)
     protected File methodFile;
-    
-    /*============== Optional (required only for certain types of projects, ignored otherwise)  ==============*/
-
     @Argument(alias = "p", description = "Project name, required for maven and gradle projects")
     protected String projectName = null;
-    
     @Argument(alias = "c", description = "Classpath, required for non-maven and non-gradle projects")
     protected String classPath = null;
-    
     // Only needed for extracting dependencies using mvn in Project class
     @Argument(alias = "h", description = "Path to maven bin directory, e.g. /usr/local, required for maven projects")
     protected File mavenHome = null;
-
-    /*============== Optional (setup)  ==============*/
-
     @Argument(alias = "o", description = "Output CSV file")
     protected File outputFile = new File("sampler_results.csv");
     protected CSVWriter outputFileWriter;
-
     @Argument(alias = "to", description = "Output file for storing the execution time")
     protected File timingOutputFile = new File("sampler_timing.csv");
-
     @Argument(alias = "x", description = "Timeout in milliseconds")
     protected Long timeoutMS = 10000L;
-
     @Argument(alias = "r", description = "Repeat each test r times")
     protected Integer reps = 1;
-
     @Argument(alias = "nm", description = "Number of methods from the method data to sample from. 0 for all.")
     protected Integer numberOfMethodsToSample = 0;
 
-    @Argument(alias = "j", description = "Run tests in a separate jvm")
-    protected Boolean inSubprocess = false;
-    
-    @Argument(alias = "jj", description = "Run every repetition in a new jvm. Includes option '-j'")
-    protected Boolean eachRepetitionInNewSubprocess = false; 
-    
-    @Argument(alias = "J", description = "Run every test in a new jvm. Includes options '-j' and '-jj'")
-    protected Boolean eachTestInNewSubprocess = false;  
-    
-    @Argument(alias = "ff", description = "Fail fast. "
-            + "If set to true, the tests will stop at the first failure and the next patch will be executed. "
-            + "You probably don't want to set this to true for Automatic Program Repair.")
-    protected Boolean failFast = false;
-    
     // Unused at the moment, thus commented out
     //@Argument(alias = "b", description = "Buffer time for test cases to be run on modified code, set only if > -1 and when -inSubprocess is false")
     //private Integer bufferTimeMS = -1;  // test case timeout: timeout on unmodified code + bufferTime
 
     /*============== Other  ==============*/
-
+    @Argument(alias = "j", description = "Run tests in a separate jvm")
+    protected Boolean inSubprocess = false;
+    @Argument(alias = "jj", description = "Run every repetition in a new jvm. Includes option '-j'")
+    protected Boolean eachRepetitionInNewSubprocess = false;
+    @Argument(alias = "J", description = "Run every test in a new jvm. Includes options '-j' and '-jj'")
+    protected Boolean eachTestInNewSubprocess = false;
+    @Argument(alias = "ff", description = "Fail fast. "
+            + "If set to true, the tests will stop at the first failure and the next patch will be executed. "
+            + "You probably don't want to set this to true for Automatic Program Repair.")
+    protected Boolean failFast = false;
     // This will only be instantiated with Gradle and Maven projects, used for getting classpath
-    protected Project project = null; 
-
-    // Arguments used in the method file
-    private static final String TEST_SEPARATOR = ",";
-    private static final String METHOD_SEPARATOR = ".";
-        
-    // Used for writing data to outputFile
-    private static final String[] OUT_HEADER = {"PatchIndex", "PatchSize", "Patch", "MethodIndex", "TestIndex", "UnitTest", "RepNumber",
-            "PatchValid", "PatchCompiled", "TestPassed", "TestExecutionTime(ns)", "TestCPUTime(ns)",
-            "TestTimedOut", "TestExceptionType", "TestExceptionMessage", "AssertionExpectedValue", 
-            "AssertionActualValue", "NoOp", "EditsValid"};
-    private static final Integer DEFAULT_ID = 0; // default id for MethodIndex
-
-    private int patchCount = 0;
+    protected Project project = null;
+    protected List<TargetMethod> methodData = new ArrayList<>();
 
     /*============== Structures holding all project data  ==============*/
-
-    protected List<TargetMethod> methodData = new ArrayList<>();
-    
     protected Set<UnitTest> testData = new LinkedHashSet<>();
+    private int patchCount = 0;
 
 
     /*============== Constructors ==============*/
@@ -143,18 +106,18 @@ public abstract class Sampler implements Serializable {
     }
 
     public Sampler(File projectDir, File methodFile) {
-        
+
         this.projectDirectory = projectDir;
         this.methodFile = methodFile;
     }
 
     protected void setUp() {
-        
+
         if (this.classPath == null) {
             this.project = new Project(projectDirectory, projectName);
             if (mavenHome != null) {
                 this.project.setMavenHome(mavenHome);
-            } else if(this.project.isMavenProject()) {
+            } else if (this.project.isMavenProject()) {
                 // In case it is indeed a Maven project, tries to find maven in
                 // the System's evironment variables and set the path to it.
                 Logger.info("I'm going to try and find your maven home, but make sure to set mavenHome for maven projects in the future.");
@@ -176,67 +139,13 @@ public abstract class Sampler implements Serializable {
 
     /*============== the following is used to store method information  ==============*/
 
-    protected static class TargetMethod {
-
-        private final File source;
-        private final String className;
-        
-        private final String methodName;
-        private final List<UnitTest> tests;
-
-        private final Integer methodID;
-
-        protected TargetMethod(File source, String className, String methodName, List<UnitTest> tests, Integer methodID) {
-            this.source = source;
-            this.className = className;
-            this.methodName = methodName;
-            this.tests = tests;
-            this.methodID = methodID;
-        }
-
-        public File getFileSource() {
-            return source;
-        }
-
-        public String getClassName() {
-            return className;
-        }
-
-        public String getMethodName() {
-            return methodName;
-        }
-
-        public List<UnitTest> getGinTests() {
-            return tests;
-        }
-
-        protected Integer getMethodID() {
-            return methodID;
-        }
-
-        @Override
-        public String toString() {
-            return className + "." + methodName;
-        }
-        
-        @Override
-        public boolean equals(Object obj) {
-                return ( (obj instanceof TargetMethod) && methodID.equals(((TargetMethod)obj).methodID) );
-        }
-        
-        @Override
-        public int hashCode() {
-            return methodID.hashCode();
-        }
-    }
-    
     /*============== sampleMethods calls the hook abstract method  ==============*/
-    protected final void sampleMethods(){
+    protected final void sampleMethods() {
         try {
             StopWatch stopWatch = StopWatch.createStarted();
             this.sampleMethodsHook();
             stopWatch.stop();
-            if (this.timingOutputFile != null){
+            if (this.timingOutputFile != null) {
                 FileUtils.forceMkdirParent(this.timingOutputFile);
                 FileUtils.writeStringToFile(this.timingOutputFile, Long.toString(stopWatch.getTime()), Charset.defaultCharset());
             }
@@ -247,19 +156,17 @@ public abstract class Sampler implements Serializable {
         }
     }
 
+    protected abstract void sampleMethodsHook();
+
     /*============== sampleMethodsHook should be overriden in each subclass of Sampler  ==============*/
 
-    protected abstract void sampleMethodsHook(); 
-
-    /*============== methods for running tests  ==============*/
-    
     protected UnitTestResultSet testEmptyPatch(String targetClass, Collection<UnitTest> tests, SourceFile sourceFile) {
 
         Logger.debug("Testing the empty patch..");
 
-        patchCount ++;
+        patchCount++;
 
-        UnitTestResultSet resultSet = null;
+        UnitTestResultSet resultSet;
 
         if (!inSubprocess && !eachRepetitionInNewSubprocess && !eachTestInNewSubprocess) {
             resultSet = testPatchInternally(targetClass, new ArrayList<>(tests), new Patch(sourceFile));
@@ -277,8 +184,8 @@ public abstract class Sampler implements Serializable {
                 Logger.error("Failed results follow: ");
                 List<UnitTestResult> failingTests = resultSet.getResults().stream()
                         .filter(res -> !res.getPassed())
-                        .collect(Collectors.toList());
-                for (UnitTestResult failedResult: failingTests) {
+                        .toList();
+                for (UnitTestResult failedResult : failingTests) {
                     Logger.error(failedResult);
                 }
             }
@@ -299,7 +206,7 @@ public abstract class Sampler implements Serializable {
         //                }
         //            }
         //            test.setTimeoutMS(maxvalue / 1000000 + bufferTimeMS);
-        //        } 
+        //        }
         //    } else {
         //        Logger.error("Error extracting unit test case runtimes.");
         //        System.exit(-1);
@@ -309,20 +216,22 @@ public abstract class Sampler implements Serializable {
         return resultSet;
     }
 
+    /*============== methods for running tests  ==============*/
+
     protected UnitTestResultSet testPatch(String targetClass, List<UnitTest> tests, Patch patch) {
-        
+
         Logger.debug("Testing patch: " + patch);
 
-        patchCount ++;
+        patchCount++;
 
-        UnitTestResultSet resultSet = null;
+        UnitTestResultSet resultSet;
 
         if (!inSubprocess && !eachTestInNewSubprocess) {
             resultSet = testPatchInternally(targetClass, tests, patch);
         } else {
             resultSet = testPatchInSubprocess(targetClass, tests, patch);
         }
-        
+
         return resultSet;
 
     }
@@ -341,10 +250,7 @@ public abstract class Sampler implements Serializable {
 
         try {
             results = testRunner.runTests(patch, reps);
-        } catch (IOException e) {
-            Logger.error(e);
-            System.exit(-1);
-        } catch (InterruptedException e) {
+        } catch (IOException | InterruptedException e) {
             Logger.error(e);
             System.exit(-1);
         }
@@ -352,8 +258,6 @@ public abstract class Sampler implements Serializable {
         return results;
 
     }
-
-    /*============== the following process input arguments  ==============*/
 
     private void printCommandlineArguments() {
 
@@ -381,26 +285,28 @@ public abstract class Sampler implements Serializable {
 
     }
 
+    /*============== the following process input arguments  ==============*/
+
     // only Tests and Method fields are required, be careful thus if supplying files with multiple projects, this is not yet handled
     private List<TargetMethod> processMethodFile() {
 
         try {
             CSVReaderHeaderAware reader = new CSVReaderHeaderAware(new FileReader(methodFile));
             Map<String, String> data = reader.readMap();
-            if ( (!data.containsKey("Method")) || (!data.containsKey("Tests")) ) {
+            if ((!data.containsKey("Method")) || (!data.containsKey("Tests"))) {
                 throw new ParseException("Both \"Method\" and \"Tests\" fields are required in the method file.", 0);
             }
 
             List<TargetMethod> methods = new ArrayList<>();
 
-            Integer idx = 0;
+            int idx = 0;
 
             while (data != null) {
 
                 String[] tests = data.get("Tests").split(TEST_SEPARATOR);
                 List<UnitTest> ginTests = new ArrayList<>();
                 for (String test : tests) {
-                    UnitTest ginTest = null;        
+                    UnitTest ginTest;
                     ginTest = UnitTest.fromString(test);
                     ginTest.setTimeoutMS(timeoutMS);
                     ginTests.add(ginTest);
@@ -411,15 +317,15 @@ public abstract class Sampler implements Serializable {
 
                 String className = StringUtils.substringBefore(method, "("); // method arguments can have dots, so need to get data without arguments first
                 className = StringUtils.substringBeforeLast(className, METHOD_SEPARATOR);
-                
+
                 File source = (project != null) ? project.findSourceFile(className) : findSourceFile(className);
-                if ( (source == null) || (!source.isFile()) ) {
+                if ((source == null) || (!source.isFile())) {
                     throw new FileNotFoundException("Cannot find source for class: " + className);
                 }
 
                 // now using fully qualified names...
                 //String methodName = StringUtils.substringAfterLast(method, className + METHOD_SEPARATOR);
-                
+
                 idx++;
                 Integer methodID = (data.containsKey("MethodIndex")) ? Integer.valueOf(data.get("MethodIndex")) : idx;
 
@@ -431,18 +337,12 @@ public abstract class Sampler implements Serializable {
                 methods.add(targetMethod);
 
                 data = reader.readMap();
-            }        
+            }
             reader.close();
 
             return methods;
 
-        } catch (CsvValidationException e) {
-            Logger.error(e.getMessage());
-            Logger.trace(e);
-        } catch (ParseException e) {
-            Logger.error(e.getMessage());
-            Logger.trace(e);
-        } catch (FileNotFoundException e) {
+        } catch (CsvValidationException | FileNotFoundException | ParseException e) {
             Logger.error(e.getMessage());
             Logger.trace(e);
         } catch (IOException e) {
@@ -468,9 +368,9 @@ public abstract class Sampler implements Serializable {
         }
         if (!moduleDir.isDirectory()) {
             return null;
-        }        
+        }
         File[] files = moduleDir.listFiles((dir, name) -> name.equals(filename));
-        if (files.length == 0) {
+        if (files == null || files.length == 0) {
             return null;
         }
         if (files.length > 1) {
@@ -481,14 +381,11 @@ public abstract class Sampler implements Serializable {
 
     }
 
-    /*============== the following write results to the output file ==============*/
-
-
     protected void writeHeader() {
 
         String parentDirName = outputFile.getParent();
         if (parentDirName == null) {
-                parentDirName = "."; // assume outputFile is in the current directory
+            parentDirName = "."; // assume outputFile is in the current directory
         }
         File parentDir = new File(parentDirName);
         if (!parentDir.exists()) {
@@ -505,19 +402,21 @@ public abstract class Sampler implements Serializable {
         }
     }
 
+    /*============== the following write results to the output file ==============*/
+
     protected void writeResults(UnitTestResultSet resultSet) {
-        
+
         writeResults(resultSet, patchCount, DEFAULT_ID);
     }
 
     protected void writeResults(UnitTestResultSet resultSet, Integer methodID) {
-        
+
         writeResults(resultSet, patchCount, methodID);
     }
 
     protected void writeResults(UnitTestResultSet testResultSet, int patchCount, Integer methodID) {
         int testIdx = 1;
-            for (UnitTestResult result : testResultSet.getResults()) {
+        for (UnitTestResult result : testResultSet.getResults()) {
             writeResult(patchCount, testIdx++, testResultSet.getPatch(), testResultSet.getValidPatch(), testResultSet.getCleanCompile(), result, methodID, testResultSet.getNoOp(), testResultSet.getEditsValid());
         }
     }
@@ -574,13 +473,67 @@ public abstract class Sampler implements Serializable {
 
     protected void close() {
         try {
-            if(this.outputFileWriter != null){
+            if (this.outputFileWriter != null) {
                 this.outputFileWriter.close();
             }
-        } catch(IOException ex){
+        } catch (IOException ex) {
             Logger.error(ex, "Exception closing the output file: " + outputFile.getAbsolutePath());
             Logger.trace(ex);
             System.exit(-1);
+        }
+    }
+
+    protected static class TargetMethod {
+
+        private final File source;
+        private final String className;
+
+        private final String methodName;
+        private final List<UnitTest> tests;
+
+        private final Integer methodID;
+
+        protected TargetMethod(File source, String className, String methodName, List<UnitTest> tests, Integer methodID) {
+            this.source = source;
+            this.className = className;
+            this.methodName = methodName;
+            this.tests = tests;
+            this.methodID = methodID;
+        }
+
+        public File getFileSource() {
+            return source;
+        }
+
+        public String getClassName() {
+            return className;
+        }
+
+        public String getMethodName() {
+            return methodName;
+        }
+
+        public List<UnitTest> getGinTests() {
+            return tests;
+        }
+
+        protected Integer getMethodID() {
+            return methodID;
+        }
+
+        @Override
+        public String toString() {
+            return className + "." + methodName;
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            return ((obj instanceof TargetMethod) && methodID.equals(((TargetMethod) obj).methodID));
+        }
+
+        @Override
+        public int hashCode() {
+            return methodID.hashCode();
         }
     }
 
